--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" class=""  href='https://i.ibb.co/CMkbCP6/Letter-Ak-Home-Logo.jpg' />
+    <link rel="icon" class=""  href='https://i.ibb.co/jDR3TY7/logo.png' />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Apex-Kare-Estates</title>
   </head>
